# group-project-group-37-project-l-u-c-i-a

./: .end  .envs  .gitignore  README.md  SCHEDULE-195.md  TODO.md  update.sh
docs/: Raspberry Pi Initial Setup.md  Updating the Repo on the Pi.md
docs/Roomba SSH Scripts/: Roomba SSH Scripts.md
docs/Roomba Serial Scripts/: Roomba Serial Scripts.md
docs/changelogs/: 2026-03-27.md  2026-04-17.md  2026-05-07.md
docs/jetson-deployment/: 00-reflash.md  01-hardware-check.md  02-zed-sdk.md  03-ros2-humble.md  04-zed-ros2-wrapper.md  05-network.md  06-cross-board-ros2.md  README.md
docs/setup/: ros2-jetson.md  ros2-pi.md  udev-rules.md
docs/vision-integration/: README.md  architecture-options.md  hardware-constraints.md  jetson-power.md  proposed-architecture.md
media/: 0322_demo.mov
src/ros2/lucia_bringup/: package.xml  setup.py
src/ros2/lucia_control/: package.xml  setup.py
src/ros2/lucia_lidar/: package.xml  setup.py
src/ros2/lucia_vision/: CMakeLists.txt  package.xml
src/ros2/lucia_vision/src/: zed_publisher.cpp
src/scripts/: drive_control.py  drive_demos.py  drive_keyboard.py  drive_keyboard_windows.py  install-service.sh  keyboard_control.py  led_test.py  lidar_monitor.py  lidar_reader.py  lucia.service  obstacle_avoid.py  reset.py  roomba_oi.py  sensor_monitor.py  sensor_reader.py  slam_avoid.py  slam_avoid_server.py  song.py
src/scripts/local/: control_panel.py  drive_keyboard_linux.py
src/scripts/ssh/: control_panel_ssh.py  power_off.py  test_led.py
