<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lucia_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for bringing up the full LUCIA rover stack.</description>
  <maintainer email="christianmichael.villanueva@sjsu.edu">LUCIA Team</maintainer>
  <license>TODO</license>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>lucia_lidar</exec_depend>
  <exec_depend>lucia_control</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
