<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lucia_vision</name>
  <version>0.1.0</version>
  <description>ZED 2i publisher node for LUCIA rover — publishes compressed RGB, odometry, and object detections.</description>
  <maintainer email="christianmichael.villanueva@sjsu.edu">LUCIA Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
